security :  implementing OAuth 2.0, adding business entities implementation and some toolkit using Oltu library to convert business  into http request, making hibernate autodetect operational  with test class